# claudeSessionManager

./: .gitignore  AgentSessionManager.spec  CHANGELOG.md  CONTRIBUTING.md  ClaudeSessionManager.spec  LICENSE  README.md  launcher.py  pyproject.toml
asm/: __init__.py  actions.py  app.py  bridge.py  codex_scanner.py  codex_session_parser.py  paths.py  scanner.py  session_parser.py  sources.py  update.py
csm/: __init__.py  actions.py  app.py  assistant.py  bridge.py  codex_scanner.py  paths.py  pricing.py  scanner.py  session_parser.py  watcher.py
packaging/: agent-session-manager.iss  build-linux.sh
packaging/hooks/: hook-PySide6.QtQml.py
tests/: test_actions.py  test_codex_backend.py  test_frontend_conventions.py  test_session_parser.py  test_sources_and_assets.py  test_update.py
web/: app.js  index.html  styles.css
