[project]
name = "agent-session-manager"
version = "2.0.2"
description = "A fast local desktop workbench for Claude Code and Codex sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Devin" }]
dependencies = [
    "PySide6>=6.7",
    "watchdog>=4.0",
    "orjson>=3.9",
]

[project.scripts]
asm = "asm.app:main"
agent-session-manager = "asm.app:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asm"]

[tool.hatch.build]
exclude = ["/.venv*", "/build", "/dist", "/release"]

# Include the web frontend assets inside the package/wheel and PyInstaller bundle.
[tool.hatch.build.targets.wheel.force-include]
"web" = "asm/web"
